--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.0",
     "bootstrap": "^5.0.0-alpha3",
     "core-js": "^3.6.5",
+    "trading-vue-js": "^0.9.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
