--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@fortawesome/fontawesome-free": "^5.15.2",
     "axios": "^0.21.0",
     "bootstrap": "^5.0.0-alpha3",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "trading-vue-js": "^0.9.0",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.6.0"
   },
